# hackathon_platform

./: LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  readme.md
.github/workflows/: docker_testing.yml  main.yml  testing.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/database/: connect_db.py  crud.py  main.py  models.py  schemas.py
backend/app/tests/: test_file.py
redis/: redis.conf
services/event_service/: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
services/event_service/app/: __init__.py  create_fastapi_app.py  main.py
services/event_service/tools/: _typos.toml  pyproject.toml  requirements.txt
services/event_service_golang/: .gitignore  .pre-commit-config.yaml  go.mod  go.sum  package-lock.json  package.json
services/event_service_golang/config/: local.yaml
services/event_service_golang/migrations/: 20250217094445_create_date_table.down.sql  (+33 more)
services/user_and_teams_service/: .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
services/user_and_teams_service/app/: config.py  create_fastapi_app.py  main.py  redis_client.py  uow.py
services/user_and_teams_service/app/alembic/: env.py
services/user_and_teams_service/app/alembic/versions/: 716ca80edf30_.py  e23c1795a780_.py
services/user_and_teams_service/app/api/: dependencies.py  routes.py
services/user_and_teams_service/app/api/v0/: auth.py  main.py  request.py  team.py  user.py
services/user_and_teams_service/app/api/v0/auth/: auth.py
services/user_and_teams_service/app/core/: auth.py  config.py  security.py
services/user_and_teams_service/app/core/utils/: __init__.py  cache.py  repository.py  unit_of_work.py
services/user_and_teams_service/app/database/: models.py  redis.py  session.py
services/user_and_teams_service/app/database/crud/: request.py  team.py  user.py  user_tag.py
services/user_and_teams_service/app/database/models/: __init__.py  base.py  request.py  team.py  user.py
services/user_and_teams_service/app/database/schemas/: request.py  team.py  user.py  user_tag.py
services/user_and_teams_service/app/repositories/: __init__.py  data.py  request.py  team.py  team_user.py  user.py  user_tag.py
services/user_and_teams_service/app/repository_cache/: cached_team.py  cached_user.py  redis_hash.py
services/user_and_teams_service/app/services/: __init__.py  request.py  service_client.py  team.py  user.py
services/user_and_teams_service/app/tests/: conftest.py  request.py  team.py  test_file.py  user.py
services/user_and_teams_service/app/tests/user_and_teams_service/: conftest.py
services/user_and_teams_service/tests/: conftest.py  testfile.py
services/user_and_teams_service/tools/: alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
users/: crud.py  schemas.py  views.py
(+151 files in other folders)
