[tool.poetry]
name = "hackathons-platform"
version = "0.1.0"
description = ""
authors = ["Maxim Drugov <midrugov@edu.hse.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.31.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
ruff = "^0.6.9"
coverage = "^7.6.3"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
pyjwt = "^2.9.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
